Restore scroll position & improve resizing performance + fixed size for + button
Restore horizontal scroll after a re-render

--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,7 @@
 
 .cp-table-add-row {
 	height: 20px;
+	width: 120px;
 }
 
 .cp-table-add.is-visible {
